# sturgeon

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sturgeon_P2.sh
P2ILiveRunSimulation/: Config.yaml  dummy_output_generator.py
R_scripts/: config.yml  install_r_libraries.R  live_processing_fast5s_guppy_v6.5.R  peroperative_seq_functions_shorter.R  sturgeon_guppy.sh
python_scripts/: SturgeonBamHandling.py  SturgeonLivePlotting.py  SturgeonLivePrediction.py  SturgeonLogging.py  config.yaml  live_processing_P2I.py  live_sturgeon_plotting.py
sturgeon/: plot.py
sturgeon/cli/: predict.py
testing_purposes/: dummy_output_generator.py
utils/: CNV_plot.R  color_translation.csv
