[build-system]
requires = [
    "hatchling",
]
build-backend="hatchling.build"

[project]
name = "sturgeon"
version = "0.4.3"
authors = [
    { name="Marc Pagès-Gallego" },
    { name="Carlo Vermeulen" },
]
description = "CNS classifier"
readme = "README.md"
requires-python = ">=3.8, <3.10"
dependencies = [
    "cffi>=1.17.1",
    "click>=8.1.8",
    "coloredlogs>=15.0.1",
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "Cython>=3.0.12",
    "flatbuffers>=25.2.10",
    "fonttools>=4.57.0",
    "h5py>=3.8.0",
    "humanfriendly>=10.0",
    "importlib_resources>=6.5.2",
    "iso8601>=2.1.0",
    "Jinja2>=3.1.6",
    "joblib>=1.4.2",
    "kiwisolver>=1.4.7",
    "lib-pod5>=0.2.4",
    "MarkupSafe>=3.0.2",
    "matplotlib>=3.9.4",
    "more-itertools>=10.7.0",
    "mpmath>=1.3.0",
    "networkx>=3.2.1",
    "numpy>=1.24.3",
    "onnxruntime>=1.12.1",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=11.2.1",
    "pod5>=0.2.4",
    "polars>=0.17.15",
    "pomegranate>=0.15.0",
    "protobuf>=6.30.2",
    "pyarrow>=11.0.0",
    "pycparser>=2.22",
    "pyparsing>=3.2.3",
    "pysam>=0.19.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "PyYAML>=6.0.2",
    "rpy2>=3.5.17",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "vbz-h5py-plugin>=1.0.1",
    "watchdog>=6.0.0",
    "zipp>=3.21.0",
]

[tool.hatch.dependencies]
modkit = {git = "https://github.com/nanoporetech/modkit.git", branch = "main"}

[project.urls]
"Homepage" = "https://github.com/marcpaga/sturgeon"
"Bug Tracker" = "https://github.com/marcpaga/sturgeon/issues"

[project.scripts]
sturgeon = "sturgeon.main:run"

[options.package_data]
sturgeon = "include/*"